Desktop/root/kubernetes/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: exam
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      name : http
      port: 8080
      targetPort: 8080
      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: meriem050/backend_image:1.0.0
          args:
          - /bin/sh
          - -c
          - touch /tmp/healthy; sleep 30; rm -f /tmp/healthy; sleep 600
          ports:
            - containerPort: 80
          livenessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            exec:
              command:
              - cat
              - /etc/hostname
            periodSeconds: 10
            failureThreshold: 30
          ports:
            - name: http
              containerPort: 8080
