Desktop/root/kubernetes/database.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: exam
  labels:
    app: mysql-service
spec:
  selector:
    app: mysql-service
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  labels:
    app: mysql-service
spec:
  replicas: 2
  serviceName: mysql-service
  selector:
    matchLabels:
      app: mysql-service
  template:
    metadata:
      labels:
        app: mysql-service
    spec:
      containers:
        - name: mysql-container
          image: mysql:latest
          args:
          - /bin/sh
          - -c
          - touch /tmp/healthy; sleep 30; rm -f /tmp/healthy; sleep 600
          ports:
            - containerPort: 80
          livenessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            exec:
              command:
              - cat
              - /etc/hostname
            periodSeconds: 10
            failureThreshold: 30
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
            - name: mysql-storage
              mountPath: /db/mysql_data
  volumeClaimTemplates:
    - metadata:
        name: mysql-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
